--- a/Templates/default-baty/entry.html
+++ b/Templates/default-baty/entry.html
@@ -30,12 +30,12 @@
           {{#adjacent}}
           <hr class="full" />
           {{/adjacent}}
-         
+
           {{#previous}}
           <a class="halfWidth left previousEntry" href="{{url}}">
             <h5>Previous post</h5>
             <span class="title">{{title}}</span>
-            <!-- <span class="summary">{{summary}}</span> -->
+            <span class="summary">{{summary}}</span>
           </a>
           {{/previous}}
 
@@ -43,11 +43,11 @@
           <a class="left halfWidth nextEntry" href="{{url}}">
             <h5>Next post</h5>
             <span class="title">{{title}}</span>
-            <!-- <span class="summary">{{summary}}</span> -->
+            <span class="summary">{{summary}}</span>
           </a>
           {{/next}}
 
-     
+
         {{/entry}}
         </div>
 
