Add new default template

--- a/Templates/baty-blog-default/entries.html
+++ b/Templates/baty-blog-default/entries.html
@@ -10,7 +10,7 @@
           <a class="small date left margin" href="{{url}}">{{date}}</a>
           {{{html}}}
           {{#tags}}
-          <a class="small tag" href="/tagged/{{slug}}">{{name}}</a>
+          <a class="small tag" href="/tagged/{{slug}}">{{tag}}</a>
           {{/tags}}
           <div class="clear"></div>
         </div>
