--- a/Templates/baty-blog-default/entry.html
+++ b/Templates/baty-blog-default/entry.html
@@ -17,7 +17,7 @@
           <br />
           <p>
             {{#tags}}
-            <a class="small tag" href="/tagged/{{slug}}">{{name}}</a>
+            <a class="small tag" href="/tagged/{{slug}}">{{tag}}</a>
             {{/tags}}
           </p>
           {{/tags.length}}
