--- a/Templates/baty-blog-default/head.html
+++ b/Templates/baty-blog-default/head.html
@@ -11,6 +11,15 @@
     <link rel="icon" href="{{{avatar}}}" type="image/x-icon">
     {{/avatar}}<link rel="stylesheet" href="{{{cssURL}}}">
     
+    <link href="https://twitter.com/jackbaty" rel="me">
+    <link href="https://github.com/jackbaty" rel="me">
+    
+    <link rel="webmention" href="https://webmention.io/www.baty.blog/webmention" />
+    <link rel="micropub" href="https://whispering-anchorage-78175.herokuapp.com/micropub">
+    <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+    <link rel="authorization_endpoint" href="https://indieauth.com/auth">
+    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+    
     
     <!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
 <script>
