--- a/Templates/magazine-edit/entry.html
+++ b/Templates/magazine-edit/entry.html
@@ -53,7 +53,7 @@
   {{#previous.thumbnail.medium}}
   <span class="db" style="outline: 1px solid rgba(0,0,0,.12);
     outline-offset: -1px;max-height:14rem;overflow:hidden">
-    <img style="width:100%" src="{{url}}">
+    <img style="max-width:100%" src="{{url}}">
    </span>
   </span>
   {{/previous.thumbnail.medium}}
@@ -73,7 +73,7 @@
   {{#next.thumbnail.medium}}
   <span class="db" style="outline: 1px solid rgba(0,0,0,.12);
     outline-offset: -1px;max-height:14rem;overflow:hidden">
-    <img style="width:100%" src="{{url}}">
+    <img style="max-width:100%" src="{{url}}">
    </span>
   </span>
   {{/next.thumbnail.medium}}
