--- a/Templates/magazine-edit/entry_line.html
+++ b/Templates/magazine-edit/entry_line.html
@@ -18,7 +18,7 @@
   <span class="w-third db fr">
     <span class="ml3 db" style="max-height:10rem;overflow:hidden;outline: 1px solid rgba(0,0,0,.12); outline-offset: -1px;">
     {{#thumbnail.medium}}
-    <img style="width:100%;vertical-align:bottom" src="{{url}}">
+    <img style="max-width:100%;vertical-align:bottom;align:center;" src="{{url}}">
     {{/thumbnail.medium}}
     </span>
    </span>
