--- a/Templates/magazine-edit/tags.html
+++ b/Templates/magazine-edit/tags.html
@@ -17,7 +17,7 @@
   <span class="db" style="outline: 1px solid rgba(0,0,0,.12);
     outline-offset: -1px;max-height:10rem;overflow:hidden">
     {{#thumbnail.medium}}
-    <img style="width:100%" src="{{url}}">
+    <img style="max-width:100%" src="{{url}}">
     {{/thumbnail.medium}}
    </span>
 </span>
