--- a/Templates/baty-console/style.css
+++ b/Templates/baty-console/style.css
@@ -141,10 +141,19 @@ input[type="submit"] {
     margin-top: 10px;
     border-top: 1px solid #AEADAD;
     border-bottom: 1px solid #AEADAD;
-    font-size: 16px;
+    font-size: 0.8em;
 }
 .post-mentions ul {
     list-style:none; 
     padding:0;
     margin-left: 0;
+}
+
+.mention-author .u-photo {
+    padding-right: 10px;
+}
+
+.mention time {
+    width: 90%;
+    align: right;
 }
